--- a/views/WEB-INF/pageroot/reserve/test.ejs
+++ b/views/WEB-INF/pageroot/reserve/test.ejs
@@ -8,7 +8,7 @@
     <meta name="copyright" content="Copyright (c) 水车 2016">
     <meta name="Keywords" content="花之吻，关于我们">
     <meta name="description" content="花之吻（KISS FLOVE）美容连锁集团是一家专业从事女子SPA会所连锁经营大型集团公司">
-    <link rel="stylesheet" href="../../../res/css/about.css">
+    <!--<link rel="stylesheet" href="../../../res/css/about.css">-->
     <title>flex测试</title>
     <style>
         .father{
@@ -27,6 +27,6 @@
     aaa
     <div class="child"></div>
 </div>
-
+<p>测试一下</p>
 </body>
 </html>
