注册页完成

--- a/views/WEB-INF/pageroot/reserve/follow.ejs
+++ b/views/WEB-INF/pageroot/reserve/follow.ejs
@@ -12,17 +12,34 @@
     <link rel=" stylesheet" href = '../../../res/css/follow.css'>
     <!-- <link rel="stylesheet" type="text/css" href="at.alicdn.com/t/font_1456386232_3118882.css"> -->
     <style>
-
+        .text{
+        }
+        .text p{
+            margin-left:10px;
+            color: #ffa1f2;
+            line-height: 30px;
+        }
+        footer img{
+            display: block;
+        }
+        a{
+            text-decoration: none;
+            color: red;
+        }
     </style>
 </head>
 <body>
 <header>
-    <h3>花之吻美容</h3>
+
 </header>
 <article>
-    <img src="" alt="">
+    <img src="../../../res/images/follow/2.jpg" alt="">
 </article>
+<div class="text">
+    <p>【指纹识别，<a href="">关注我们</a>给你新的自己！】</p>
+</div>
 <footer>
+    <img src="../../../res/images/follow/3.png" alt="">
     <img src="../../../res/images/follow/link.gif" alt="">
 </footer>
 </body>
