--- a/views/WEB-INF/pageroot/reserve/test.ejs
+++ b/views/WEB-INF/pageroot/reserve/test.ejs
@@ -1,5 +1,11 @@
+<%@ page language="java" import="java.util.*" contentType="text/html; charset=utf-8" %>
+<%@page errorPage="../error.jsp" %> <%--一旦出现错误后将跳转到error.jsp中 --%>
+<%
+String path = request.getContextPath();
+String basePath = request.getScheme() + "://"+ request.getServerName() + ":" + request.getServerPort()+ path + "/";
+%>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,25 +14,143 @@
     <meta name="copyright" content="Copyright (c) 水车 2016">
     <meta name="Keywords" content="花之吻，关于我们">
     <meta name="description" content="花之吻（KISS FLOVE）美容连锁集团是一家专业从事女子SPA会所连锁经营大型集团公司">
-    <!--<link rel="stylesheet" href="../../../res/css/about.css">-->
-    <title>flex测试</title>
-    <style>
-        .father{
-            min-height: 200px;
-            background-color: #000;
-        }
-        .child{
-            height: 50px;
-            width: 300px;
-            background-color: red;
-        }
-    </style>
+    <!-- for jquery easy ui -->
+    <link rel="stylesheet"  href="<%=request.getContextPath()%>/res/css/userRegist.css"/>
 </head>
-<body>
-<div class="father">
-    aaa
-    <div class="child"></div>
-</div>
-<p>测试一下</p>
+<body onload="bodyload()">
+<header>
+    <img class="logo" src="../../../res/images/userRegist/logo.png" alt="">
+    <p class="cue">请输入您的手机号,便于我们更好地为您提供服务。谢谢！</p>
+</header>
+<article>
+    <form id="fm" method="post"  enctype="multipart/form-data" novalidate>
+        <!-- 获取手机号码 -->
+        <section class="mobile-warp">
+            <label for="mobile" class="mobile-label"><i class="iconfont icon-shoujihaoma"></i></label>
+            <input class="mobile" type="tel" pattern="/^\d*/" placeholder="请输入手机号码" id="mobile" name="mobile">
+        </section>
+        <!-- 获取验证码 -->
+        <section class="mobile-valid-code-wrap">
+            <input type='button' value='获取验证码' class="get-code">
+            <label class="mobile-valid-code-label" for="mobileValidCode"><i class="iconfont icon-yanzhengma"></i></label>
+            <input class="mobile-valid-code" type="tel" pattern="/^\d*/" placeholder="输入手机验证码" id="mobileValidCode" name="mobileValidCode"/>
+        </section>
+        <!-- 注册按钮 -->
+        <section>
+            <div class="btn-save" id="btnSave">注册</div>
+        </section>
+    </form>
+</article>
+<!-- <section class="container"> -->
+<form id="fm" method="post"  enctype="multipart/form-data" novalidate>
+    <section class="form-group">
+        <label for="mobile">手机号</label>
+        <input type="tel" pattern="/^\d*/" placeholder="输入手机号码" id="mobile" name="mobile" class="form-control"/>
+    </section>
+    <section class="form-group">
+        <label id="validCodeLabel" ></label>
+        <button  type="button"  value="获取验证码"  id="btnGetMobileValidCode"  class="btn btn-default col-xs-8 col-xs-offset-2 btn-info">获取验证码</button>
+    </section>
+    <section class="form-group">
+        <label for=""> </label>
+    </section>
+    <section class="form-group">
+        <label for="mobileValidCode">手机验证码</label>
+        <input type="tel" pattern="/^\d*/" placeholder="输入手机验证码" id="mobileValidCode" name="mobileValidCode" class="form-control"/>
+    </section>
+    <section>
+        <button type="button"  value="注册"  id="btnSave" onclick="save()" class="btn btn-default col-xs-8 col-xs-offset-2 btn-info">注册</button>
+    </section>
+
+</form>
+
+
+</section>
+>
+<script type="text/javascript" src='<%=request.getContextPath()%>/res/js/zepto.min.1.1.6.js'></script>
+<script type="text/javascript">
+    $(function(){
+        $('#btnSave').on('tap',save);
+    });
+
+    var path="<%=request.getContextPath()%>";
+    var wait=60;
+
+    function getMobileValidCode(o) {
+
+        if($('#mobile').val().trim()=='')
+        {
+            $.messager.alert("提示", "请输入手机号码!");
+            return;
+        }
+
+        if (wait == 0) {
+            o.removeAttribute("disabled");
+            o.innerHTML="获取验证码";
+            wait = 60;
+        } else {
+
+            if(wait==60)
+            {
+                $.post('<%=request.getContextPath()%>/home/user/getMobileValidCode',{openId:openId,mobile:$('#mobile').val() },function(result){
+                    if (result.success){
+                        $.messager.alert("提示", result.msg);
+                    } else {
+                        $.messager.alert("失败", result.errorMsg);
+                    }
+                },'json');
+            }
+            o.setAttribute("disabled", true);
+            o.innerHTML="重新发送(" + wait + ")";
+            wait--;
+            setTimeout(function() {getMobileValidCode(o);},1000);
+        }
+    }
+
+
+
+    function bodyload()
+    {
+        document.getElementById("btnGetMobileValidCode").disabled = false;
+        //document.getElementById("btnGetMobileValidCode").onclick=function(){getMobileValidCode(this);}
+        $('#btnGetMobileValidCode').on('tap',function(){getMobileValidCode($(this));});
+    }
+
+
+    function save(){
+        if($('#mobileValidCode').val().length!=6)
+        {
+            $.messager.alert("错误", "请输入6位验证码!");
+            return;
+        }
+
+
+        $('#fm').form('submit',{
+            url: '<%=request.getContextPath()%>/home/user/regist',
+            onSubmit: function(param){
+                param.openId=openId;
+                return $(this).form('validate');
+            },
+            success: function(result){
+                var result = eval('('+result+')');
+                if (result.errorMsg){
+                    $.messager.alert("错误", result.errorMsg);
+
+                } else {
+                    if(alert(result.msg))
+                    {
+                        WeixinJSBridge.call('closeWindow');  //微信关闭页面
+                    }
+                    else
+                    {
+                        WeixinJSBridge.call('closeWindow');  //微信关闭页面
+                    }
+                }
+            }
+        });
+    }
+</script>
+
 </body>
 </html>
+
