--- a/public/res/css/about.css
+++ b/public/res/css/about.css
@@ -20,6 +20,7 @@ header {
   /*li*/
   list-style-type: none;
   width: calc(100% - 20px);
+  width: -webkit-calc(100% - 20px);
   height: 40px;
   background: #fff;
   color: #444444;
