--- a/views/WEB-INF/pageroot/reserve/evaluation.ejs
+++ b/views/WEB-INF/pageroot/reserve/evaluation.ejs
@@ -35,7 +35,7 @@
 
     <dl class="squareWarp">
         <dt class="squareTitle">美容师评价</dt>
-        <dd class="squareList"><div class="square"><i class="iconfont"></i></div>好评</dd>
+        <dd class="squareList"><div class="square"><i class="iconfont"></i></div>好评好评</dd>
         <dd class="squareList"><div class="square"><i class="iconfont"></i></div>一般</dd>
         <dd class="squareList"><div class="square"><i class="iconfont"></i></div>差评</dd>
     </dl>
