--- a/views/WEB-INF/pageroot/reserve/follow.ejs
+++ b/views/WEB-INF/pageroot/reserve/follow.ejs
@@ -12,7 +12,7 @@
     <link rel=" stylesheet" href = '../../../res/css/follow.css'>
     <!-- <link rel="stylesheet" type="text/css" href="at.alicdn.com/t/font_1456386232_3118882.css"> -->
     <style>
-        .text{
+        /*.text{
         }
         .text p{
             margin-left:10px;
@@ -25,11 +25,23 @@
         a{
             text-decoration: none;
             color: red;
+        }*/
+        body{
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        img{
+            width:100%;
+            border:none;
         }
     </style>
 </head>
 <body>
-<header>
+<img src="../../../res/images/follow/bg.jpg" alt="">
+<!--<header>
 
 </header>
 <article>
@@ -41,6 +53,9 @@
 <footer>
     <img src="../../../res/images/follow/3.png" alt="">
     <img src="../../../res/images/follow/link.gif" alt="">
-</footer>
+</footer>-->
 </body>
+<script>
+    var a = document.querySelector('#ja-ZQshow');
+</script>
 </html>
