--- a/public/res/scss/list.scss
+++ b/public/res/scss/list.scss
@@ -2,9 +2,7 @@
 /* 驼峰命名法 */
 body {
   font-family: 'Microsoft YaHei',arial,helvetica,sans-serif; }
-
-li {
-  list-style-type: none; }
+li{list-style-type: none}
 
 /* 顶部导航栏 */
 .headerNav {
@@ -22,7 +20,6 @@ li {
   box-sizing: border-box;
   margin: 1px 0 0 0;
   background: #ffffff; }
-
 .navBar li {
   list-style-type: none;
   float: left;
@@ -32,12 +29,10 @@ li {
   line-height: 40px;
   text-align: center;
   position: relative; }
-
 .navBar li a {
   color: #626262;
   display: block;
   -webkit-tap-highlight-color: transparent; }
-
 .navBar li::after {
   content: "";
   width: 1px;
@@ -46,7 +41,6 @@ li {
   position: absolute;
   right: 0;
   top: 14px; }
-
 .navBar li:last-child::after {
   content: "";
   width: 0; }
@@ -55,6 +49,7 @@ li {
   content: '';
   display: block;
   clear: both; }
+
 
 .mainLine {
   width: 90%;
@@ -110,56 +105,61 @@ li {
   content: '';
   display: block;
   clear: both; }
-
 /* 周期护理 */
-.careItems {
-  background: #e0e0e0; }
-
-.careItemList {
+.careItems{
+  background: #e0e0e0;
+}
+.careItemList{
+  img{
+    width: 100%;
+  }
   margin-top: 1px;
   padding: 0 10px;
   background: #ffffff;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-  .careItemList img {
-    width: 100%; }
-
-.acareItem {
-  border-bottom: 2px solid #d3d3d3; }
-
-.acareItem::after {
+  box-sizing: border-box;
+}
+.acareItem{
+  border-bottom:2px solid #d3d3d3;
+}
+.acareItem::after{
   content: '';
   display: block;
-  clear: both; }
-
-.careItemImg {
+  clear: both;
+}
+.careItemImg{
   width: 30%;
   border-radius: 50%;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
-.careItemDetails {
+.careItemDetails{
   padding-left: 10px;
   width: calc(70% - 20px);
-  text-align: center; }
-  .careItemDetails h3 {
+  text-align: center;
+  h3{
     font-size: 13px;
-    color: #636363; }
-  .careItemDetails p {
+    color: #636363;
+  }
+  p{
     font-size: 12px;
     line-height: 20px;
     width: 70%;
     background: #ececec;
     border-radius: 10px;
     margin: 5px auto;
-    color: #6D6D6D; }
-    .careItemDetails p span {
+    color: #6D6D6D;
+    span{
       display: inline-block;
       margin-left: 10px;
-      color: #7c87ff; }
-
-.pullLeft {
-  float: left; }
+      color: #7c87ff;
+    }
+  }
+}
+.pullLeft{
+  float: left;
+}
 
 /* 底部分页导航 */
 footer, footer p {
@@ -172,11 +172,10 @@ footer {
   position: fixed;
   bottom: 0;
   height: 40px;
-  background: #f9eaf9;
+  background: #df8fec;
   border-top: 1px solid #CACACA; }
 
 footer a {
-  color:#f372b4;
   -webkit-tap-highlight-color: transparent; }
 
 footer a p {
@@ -235,7 +234,6 @@ footer a:nth-child(4) p {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 30%; }
-
 .itemImg img {
   display: block;
   width: 100%;
@@ -248,7 +246,6 @@ footer a:nth-child(4) p {
   box-sizing: border-box;
   width: 70%;
   padding-left: 10px; }
-
 .itemDetails h3 {
   font-size: 15px;
   margin-left: -7px;
@@ -260,7 +257,6 @@ footer a:nth-child(4) p {
   -ms-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap; }
-
 .itemDetails .itemEffects {
   font-size: 11px;
   color: #acacac;
@@ -271,7 +267,6 @@ footer a:nth-child(4) p {
   -ms-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap; }
-
 .itemDetails .price {
   margin-top: 10px;
   height: 25px;
@@ -280,19 +275,16 @@ footer a:nth-child(4) p {
   font-weight: 600;
   line-height: 25px;
   position: relative; }
-
 .itemDetails .price i {
   font-size: 12px;
   color: RED;
   font-style: normal; }
-
 .itemDetails .price span {
   font-size: 13px;
   height: 25px;
   line-height: 25px;
   color: #CACACA;
   font-weight: normal; }
-
 .itemDetails .shell {
   color: #CACACA;
   font-size: 12px;
@@ -303,69 +295,77 @@ footer a:nth-child(4) p {
   display: none; }
 
 /* 周期护理 */
-.foldHeader {
+.foldHeader{
   margin-top: 1px;
   background: #ffffff;
-  padding: 10px;
+  padding:10px;
   height: 118px;
   position: relative;
   overflow: hidden;
   -webkit-transition: height .8s, padding .8s;
   -moz-transition: height .8s, padding .8s;
-  -ms-transition: height 0.8s, padding 0.8s;
+  -ms-transition: height .8s, padding .8s ;
   -o-transition: height .8s, padding .8s;
-  transition: height 0.8s, padding 0.8s; }
-
-.open {
+  transition: height .8s, padding .8s ;
+}
+.open{
   position: absolute;
   right: 10px;
-  bottom: 10px; }
+  bottom: 10px;
+}
 
-.fold {
+.fold{
   overflow: hidden;
-  margin-top: 10px;
+  margin-top: 10px;;
   height: 118px;
   -webkit-transition: height .8s;
   -moz-transition: height .8s;
   -ms-transition: height .8s;
   -o-transition: height .8s;
-  transition: height .8s; }
+  transition: height .8s;
+}
 
-.foldBody {
+.foldBody{
   background: #9fffce;
-  padding: 0 10px; }
-
-.foldImg {
+  padding: 0 10px;
+}
+.foldImg{
   width: 30%;
   border-radius: 50%;
   overflow: hidden;
-  margin: 10px 0; }
-  .foldImg img {
-    width: 100%; }
-
-.foldItemDetails {
+  margin: 10px 0;
+  img{
+    width: 100%;
+  }
+}
+.foldItemDetails{
   padding-left: 10px;
   padding-top: 10px;
-  width: calc(70% - 20px); }
-  .foldItemDetails h3 {
+  width: calc(70% - 20px);
+  h3{
     font-size: 13px;
-    color: #636363; }
-  .foldItemDetails p {
+    color: #636363;
+  }
+  p{
     font-size: 12px;
     line-height: 20px;
-    color: #6D6D6D; }
-    .foldItemDetails p span {
+    color: #6D6D6D;
+    span{
       display: inline-block;
       margin-left: 2px;
-      color: #ff6a39; }
-
+      color: #ff6a39;
+    }
+  }
+}
 /*# sourceMappingURL=list.css.map */
 .iconfont {
+
   font-family: "iconfont" !important;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 .iconfontHome {
   font-size: 20px;
@@ -379,16 +379,7 @@ footer a:nth-child(4) p {
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale; }
 
-.icon-home:before {
-  content: "\e601"; }
-
-.icon-shouqi:before {
-  content: "\e607"; }
-
-.icon-zhankai:before {
-  content: "\e608"; }
-
-.icon-sousuo:before {
-  content: "\e600"; }
-
-/*# sourceMappingURL=list.css.map */
+.icon-home:before { content: "\e601"; }
+.icon-shouqi:before { content: "\e607"; }
+.icon-zhankai:before { content: "\e608"; }
+.icon-sousuo:before {  content: "\e600"; }
